changed breakpoint to 960 to fit inside lospec iframe

--- a/theme.less
+++ b/theme.less
@@ -1,4 +1,14 @@
-@import "../nodebb-theme-slick/theme";
+
+@import "../nodebb-theme-slick/less/bootstrap/bootstrap";
+
+@screen-md: 960px;
+@screen-md-min: @screen-md;
+@screen-desktop: @screen-md-min;
+@screen-sm-max: (@screen-md-min - 1);
+@screen-md-max: (@screen-lg-min - 1);
+
+@import "../nodebb-theme-slick/less/slick";
+
 
 
 @bg: #332f35;
